Get out of the way, bot!

--- a/bwapi/CMakeLists.txt
+++ b/bwapi/CMakeLists.txt
@@ -22,6 +22,7 @@ add_subdirectory(BWAPILauncher)
 add_subdirectory(BWAPIClient)
 
 add_subdirectory(ExampleAIModule)
+add_subdirectory(NullAIModule)
 add_subdirectory(TestAIModule)
 
 if (BUILD_COMPAT)
